--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: DLT40 Pima Community College
 description: An opportunity for PCC students to do research with DLT40 astronomers!
+<img src="https://svalenti.github.io/DLT40PimaSchool.github.io/images/pccsymbol.png" alt="hi" width="100" height="100" class="inline"/> 
