--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-cayman
 title: DLT40 Pima Community College
 description: An opportunity for PCC students to do research with DLT40 astronomers!
+url: "/"
+plugins:
+  - jekyll-feed
