--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: [DLT40 Pima Community College](https://svalenti.github.io/DLT40PimaSchool.github.io/)
+title: DLT40 Pima Community College
 description: An opportunity for PCC students to do research with DLT40 astronomers!
 url: "/"
 plugins:
